# yes_we_can_bus

./: CAN validator.cpp  CMakeLists.txt  LICENSE  README.md  READMEITA.md
Pcan/: PCANBasic.h
serializzazione_segnali/: canAdapter.cpp  canAdapter.h  canSignal.h
serializzazione_segnali/adaptee/: pCanAdaptee.cpp  pCanAdaptee.h
test/: test.cpp  test.h  testDispatcher.cpp  testDispatcher.h
test/canTest/tests/: testByte.cpp  testByte.h
utils/generalUtils/: generalUtils.cpp  generalUtils.h
utils/logger/: logger.cpp  logger.h
